--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "dist",
     "src"
   ],
+  "repository": {
+    "url": "https://github.com/Mike-code1805/me-schedule-days",
+    "type": "git"
+  },
+  "homepage": "https://github.com/Mike-code1805",
   "engines": {
     "node": ">=10"
   },
@@ -17,7 +22,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "test:watch": "tsdx test --watch"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -47,16 +53,34 @@
     }
   ],
   "devDependencies": {
+    "@types/react-test-renderer": "^18.0.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@size-limit/preset-small-lib": "^8.1.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "babel-jest": "^29.3.1",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
     "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^8.1.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.1",
     "typescript": "^4.8.4"
+  },
+  "keywords": [
+    "schema",
+    "days",
+    "miguel",
+    "enrique"
+  ],
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
